Rename SeqStream.collect() to toSeq() and remove Seq.collect(). Add mapMulti to Seq and SeqStream, and Seq.ofNullable. Add a test detecting new Stream methods not yet considered for Seq.